# cairn-knowledge-graph

./: Cargo.toml  README.md
benches/: experiments.rs  sparse_vector_indexing_benchmark.rs
src/: lib.rs
src/archive/concepts/: character.rs  context.rs  mod.rs  simple_path.rs  string.rs
src/archive/concepts/cairn_lang/: cairn_lang.rs  identifier.rs  mod.rs  namespace.rs
src/archive/concepts/graph/: mod.rs  value_type_vertex_filter.rs
src/archive/concepts/primitives/: primitive.rs  primitives.rs
src/archive/graph/: capacity_configuration.rs  graph.rs  mod.rs
src/archive/graph/operations/: add_raw_entity.rs  add_raw_entity_type.rs  add_raw_relationship.rs  add_raw_relationship_type.rs  mod.rs
src/archive/graph/raw_entity/: entity_index.rs  entity_value.rs  mod.rs  raw_entity.rs
src/archive/graph/raw_entity_type/: entity_type_index.rs  mod.rs  raw_entity_type.rs
src/archive/graph/raw_relationship/: mod.rs  raw_relationship.rs
src/archive/graph/raw_relationship_type/: mod.rs  raw_relationship_type.rs  relationship_type_index.rs
src/archive/graph/value_type/: mod.rs  value_type.rs  value_type_identifier.rs
src/archive/operations/: mod.rs
src/archive/operations/path/: mod.rs  simple_path.rs
src/concepts/: concept.rs  set.rs
src/concepts/cairn_lang/: knowledge_graph_key.rs  namespace_separator.rs
src/concepts/primitives/: configuration.rs  mod.rs  primitives.rs
src/error/: graph_computing_error.rs  knowledge_graph_error.rs  logic_error.rs  mod.rs  other_error.rs  system_error.rs  user_error.rs
src/graph/: graph.rs  mod.rs
src/operations/concept/: concept.rs  mod.rs
