[package]
name = "cairn-knowledge-graph"
version = "0.5.0"
authors = ["code_sam <mail@samdekker.nl>"]
description = "An embedded and in-memory knowledge graph for static specification analysis."
edition = "2021"
keywords = ["knowledge", "graph"]
license = "CC-BY-NC-4.0"
readme = "README.md"
repository = "https://github.com/code-sam/cairn-knowledge-graph"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stacked_linear_algebra_graph = {version = "0.3"}

[dev-dependencies]
criterion = "0.3"

[[bench]]
# name = "experiments"
# name = "vector_hashmap_benchmark"
name = "sparse_vector_indexing_benchmark"
harness = false