[package]
name = "cairn-knowledge-graph"
version = "0.5.0"
authors = ["code_sam <mail@samdekker.nl>"]
description = "An embedded and in-memory knowledge graph for static specification analysis."
edition = "2021"
keywords = ["knowledge", "graph"]
license = "CC-BY-NC-4.0"
readme = "README.md"
repository = "https://github.com/code-sam/cairn-knowledge-graph"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stacked_linear_algebra_graph = {version = "0.9"}

# [dependencies.uuid]
# version = "1.5.0"
# features = [
#     "v4",                # Lets you generate random UUIDs
#     "fast-rng",          # Use a faster (but still sufficiently random) RNG
#     "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
# ]

[dev-dependencies]
criterion = "0.3"

# [[bench]]
# name = "experiments"
# name = "vector_hashmap_benchmark"
# name = "sparse_vector_indexing_benchmark"
# harness = false